nuevas especificaciones profesor

--- a/src/inverter_gui.kv
+++ b/src/inverter_gui.kv
@@ -42,7 +42,7 @@
                     Slider:
                         id: modulation_index_slider
 
-                        step: 0.01
+                        step: root.STEP_MODULATION_INDEX
                         color: (0, 0, 0, 1)
 
                         min: root.MIN_MODULATION_INDEX
